Memories now save correctly, display properly, and attach reasons properly.  Also adjusted how the memory list is displayed so it top aligns.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,3 +34,8 @@ a {
 .fixed {
     position: fixed;
 }
+
+/* Removes the weird gap on the toolbar */
+.v-toolbar {
+    flex: none !important;
+}
